--- a/wp-secure-image.css
+++ b/wp-secure-image.css
@@ -1,3 +1,10 @@
+.wpsiw_ajax_process{
+	background: url('images/ajax-process.gif') no-repeat;
+	display:block;
+	width:208px;
+	height:13px;
+	margin-top:5px;
+}
 .ac_results {
   border: 1px solid gray;
   background-color: white;
@@ -43,3 +50,44 @@
   }
   #wpcontentt { margin-left: 5px !important; }
   
+
+#TB_ajaxContent{overflow: hidden;}
+#wpsiw_ajax_process{
+	padding: 10px 15px 15px 15px;
+	position:absolute;
+	background-color: #e8e8e8;
+	top: 250px;
+	left:220px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	display: none;
+	border:1px solid #cac8c8;
+}
+.wpsiw_upload_content{
+	margin:30px 0px 20px 0px;
+}
+#upload-queue{display: none;}
+.wpsiw_fileupload{
+	width:350px;
+	border:1px solid #dfdfdf;
+	float:left;
+	padding:3px;
+	margin-top:-3px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	margin-right:10px;
+}
+.wpsiw_file_select{
+	float:left;
+	height:24px;
+	width:115px;
+}
+#custom-queue{margin-top:5px;}
+.row-actionslink{
+	color: #21759B !important;
+}
+.row-actionslink:hover{
+	color: #d54e21 !important;
+}
+#wpsiw_setting_body img{cursor: pointer;}
+.updated{padding:5px 10px !important;}
